src/objects/Media_View__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Media Views</relationshipLabel>
        <relationshipName>Media_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Media Views</relationshipLabel>
        <relationshipName>Media_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_User_Group__c</fullName>
        <description>This field is created for Reporting purpose  - #2131</description>
        <formula>CreatedBy.Group__c</formula>
        <label>Created By User Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Duration</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_ID__c</fullName>
        <label>Event ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Link__c</fullName>
        <label>Event Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>File_Extension__c</fullName>
        <label>File Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_ID__c</fullName>
        <label>File ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Media Views</relationshipLabel>
        <relationshipName>Media_Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PageNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PageNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isMedia__c</fullName>
        <formula>CONTAINS($Setup.MediaType__c.File_Extension__c,File_Extension__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isMedia</label>
        <type>Checkbox</type>
    </fields>
    <label>Media View</label>
    <listViews>
        <fullName>Media_View_for_Event</fullName>
        <columns>NAME</columns>
        <columns>Event_ID__c</columns>
        <columns>File_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>Event_Link__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Media View for Event</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MD-{00000}</displayFormat>
        <label>Media View ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>